Endret SmsVarselFactory.java til å håndtere når kontaktPerson ikke er satt, når AG ønsker sms for både kontakt info fra Avtale og refusjon, og kun sms for kontakt info refusjon
Co-authored-by: Magnus Rom <magnus.skalberg.rom@nav.no>